samples/_failures_safe/1761002599_c320a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab999126.c: In function ‘main’:
./samples/SAFE/__tmp_ab999126.c:154:44: error: expected ‘)’ at end of input
  154 |         printf("%d. Exit\n", num_operations
      |               ~                            ^
      |                                            )
./samples/SAFE/__tmp_ab999126.c:154:9: error: expected declaration or statement at end of input
  154 |         printf("%d. Exit\n", num_operations
      |         ^~~~~~
./samples/SAFE/__tmp_ab999126.c:154:9: error: expected declaration or statement at end of input
